--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,34 @@
 body {
-	font-size: 16px/1;
+	display: flex;
+	font: 16px/1 sans-serif;
+	margin: 0;
+}
+
+#root {
+	width: 100%;
+}
+
+a {
+  color: rgba(242, 104, 43, 0.8);
+  font-weight: bold;
+  text-decoration: none;
+}
+
+
+header {
+	display: flex;
+	align-items: center;
+	padding: 10px;
+}
+
+ul {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
 }
 
 li {
-	list-style: circle;
+	list-style: none;
+	padding: 0 10px;
 }
