--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,27 @@
-body,header,ul{display:flex}body{font:16px/1 sans-serif;margin:0}#root{width:100%}a{color:rgba(242,104,43,.8);font-weight:700;text-decoration:none}header{align-items:center;padding:10px}ul{flex-direction:row;justify-content:space-between;align-items:center}li{list-style:none;padding:0 10px}
+body {
+  display: flex;
+  font: 16px/1 sans-serif;
+  margin: 0; }
+
+#root {
+  width: 100%; }
+
+a {
+  color: rgba(242, 104, 43, 0.8);
+  font-weight: bold;
+  text-decoration: none; }
+
+header {
+  display: flex;
+  align-items: center;
+  padding: 10px; }
+
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center; }
+
+li {
+  list-style: none;
+  padding: 0 10px; }
