--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 body {
+  display: -webkit-box;
   display: flex;
   font: 16px/1 sans-serif;
   margin: 0; }
@@ -12,14 +13,21 @@ a {
   text-decoration: none; }
 
 header {
+  display: -webkit-box;
   display: flex;
+  -webkit-box-align: center;
   align-items: center;
   padding: 10px; }
 
 ul {
+  display: -webkit-box;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
   flex-direction: row;
+  -webkit-box-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
   align-items: center; }
 
 li {
