--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@ body {
   font-family: 'Open Sans', 'Noto Sans KR', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f6e2d8; }
+  background-color: white; }
 
 #root {
   width: 100%; }
